--- a/ec2.yaml
+++ b/ec2.yaml
@@ -31,7 +31,7 @@
     region: ap-south-1
     security_group: ec2-security-group
     tag_name:
-      Name: Aj-ec2   
+      Name: nkm-ec2   
 
   tasks:
     - name: Create a security group
