--- a/ec2.yaml
+++ b/ec2.yaml
@@ -22,7 +22,7 @@
 
   vars:
     ansible_python_interpreter: /usr/bin/python3.10
-    keypair: Mumbai
+    keypair: 16Aug
     instance_type: t2.micro
     image_id: ami-0f5ee92e2d63afc18
     wait: yes
